[package]
name = "wyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
serde = "1.0.203"
serde_derive = "1.0.203"
lsp-types = "0.97.0"
zip = "2.1.3"
dirs = "5.0.1"
pest = "2"
pest_derive = "2.1"
clap = "3"